Mon Jul  1 15:05:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV#<<): use StringIO#set_encoding instead of creating
	  new StringIO instance with String#force_encoding, forcing encoding
	  discards the cached coderange bits and can make further operations
	  very slow.  [ruby-core:55714] [Bug #8585]

	* ext/stringio/stringio.c (strio_write): keep coderange of
	  ptr->string.

	* string.c (rb_enc_cr_str_buf_cat, rb_str_append): consider an empty
	  string 7bit-clean and should not discard cached coderange of string
	  to be appended.

Mon Jul  1 12:56:41 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_using_module): activate refinements in the ancestors of
	  the argument module to support refinement inheritance by
	  Module#include.  [ruby-core:55671] [Feature #8571]

	* test/ruby/test_refinement.rb: related test.

Mon Jul  1 12:02:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Skip leading zeros.

Mon Jul  1 00:59:23 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (nlz16): New function.
	  (nlz32): Ditto.
	  (nlz64): Ditto.
	  (nlz128): Ditto.
	  (nlz): Redefined using an above function.
	  (bitsize): New macro.
	  (rb_cstr_to_inum): Use bitsize instead of nlz.

Sun Jun 30 22:40:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* lib/prime.rb: Corrected a few comments. Patch by @Nullset14.
	  Fixes GH-346.

Sun Jun 30 21:53:38 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cstr_to_inum): Use rb_integer_unpack if base is a power
	  of 2.

Sun Jun 30 10:59:23 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (join_argv): use backslash instead of slash in program
	  path, otherwise cannot invoke "./c\u{1ee7}a.exe" for some reason.
	  [ruby-core:24309] [Bug #1771]

	* io.c (spawnv, spawn): use UTF-8 spawn family.  [Bug #1771]

	* process.c (proc_exec_sh, proc_spawn_cmd, proc_spawn_sh): ditto.

	* win32/win32.c (translate_char, join_argv, has_redirection): make
	  codepage aware.
